# hlscreen

./: .gitattributes  .gitignore  .mailmap  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  MEMORY.md  NOTICE  PLAN.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_LICENSES.txt  THIRD_PARTY_NOTICES.md  TODO.md  about.hbs  about.toml  deny.toml  dist-workspace.toml
.github/: dependabot.yml  pull_request_template.md
.specify/: feature.json  init-options.json  integration.json
config/: example.toml
crates/hls-cli/: Cargo.toml
crates/hls-cli/src/: main.rs
crates/hls-cli/src/commands/: alerts.rs  analog.rs  backfill.rs  bench.rs  doctor.rs  explain.rs  export_parquet.rs  extension.rs  fees.rs  health.rs  init.rs  live.rs  metadata.rs  mod.rs  record.rs  replay.rs  screen.rs  server.rs  symbols.rs  ws_rate_limit.rs
crates/hls-cli/tests/: alerts_command.rs  analog_command.rs  backfill_command.rs  basic_commands.rs  bench_command.rs  explain_command.rs  export_parquet_command.rs  extension_command.rs  full_pipeline_smoke.rs  health_commands.rs  live_mock.rs  metrics_output.rs  microstructure_safety.rs  pty_tui.rs  record_replay.rs  replay_parity_command.rs  screen_command.rs
crates/hls-core/: Cargo.toml
crates/hls-core/src/: alerts.rs  confidence.rs  config.rs  data_gap.rs  error.rs  extension.rs  fees.rs  health.rs  lib.rs  market_state.rs  metadata.rs  metrics.rs  score.rs  symbol.rs  telemetry.rs  time.rs
crates/hls-core/tests/: alerts_contract.rs  confidence_state.rs  config_symbol.rs  extension_contract.rs  fees_contract.rs  health_state.rs  market_state.rs  metadata_enrichment.rs  metrics_contract.rs  score_breakdown.rs
crates/hls-features/: Cargo.toml
crates/hls-features/src/: alerts.rs  composite.rs  engine.rs  formulas.rs  lib.rs  metrics.rs  microstructure.rs  resilience.rs  tradeability.rs  windows.rs
crates/hls-features/tests/: alerts.rs  canonical_metrics.rs  composite.rs  fee_tradeability.rs  formulas.rs  resilience.rs  tradeability.rs  windows.rs
crates/hls-hyperliquid/: Cargo.toml
crates/hls-hyperliquid/src/: lib.rs  rest.rs
crates/hls-hyperliquid/src/ws/: connection.rs  mod.rs  parser.rs  subscriptions.rs  types.rs
crates/hls-hyperliquid/tests/: metadata_enrichment.rs  rest_metadata.rs  ws_parser.rs  ws_subscriptions.rs
crates/hls-server/: Cargo.toml
crates/hls-server/src/: lib.rs
crates/hls-server/tests/: read_only_api.rs
crates/hls-store/: Cargo.toml
crates/hls-store/src/: analog.rs  backfill.rs  benchmark.rs  candle_cache.rs  lib.rs  metadata.rs  normalized.rs  parquet.rs  paths.rs  raw.rs  recorder.rs  replay.rs  schema.rs
crates/hls-store/tests/: analog_search.rs  backfill_gaps.rs  benchmark_manifest.rs  candle_cache.rs  metadata_registry.rs  normalized_writer.rs  parquet_export.rs  raw_writer.rs  replay_parity.rs  schema_version.rs  storage_boundaries.rs
crates/hls-tui/: Cargo.toml
crates/hls-tui/src/: alerts.rs  app.rs  detail.rs  health.rs  interaction.rs  lib.rs  ratatui_app.rs  theme.rs
crates/hls-tui/tests/: alert_history.rs  confidence_pane.rs  health_pane.rs  interactive_tui.rs  main_table_golden.rs  ratatui_cockpit.rs  why_ranked_pane.rs  workstation_interaction.rs
docs/: DEVELOPMENT_TOOLING.md  OPEN_SOURCE_AUDIT.md  OPEN_SOURCE_CHECKLIST.md  PRIVACY.md  README.md  RELEASING.md  ROADMAP.md  THREAT_MODEL.md  architecture.md  data-format.md  deployment.md  extensions.md  feature-definitions.md  metric-validation.md  microstructure.md  production-readiness.md
examples/: screen-rules.md
memory/: 2026-07-08.md  2026-07-09.md
reflections/: 2026-07-08T16-20-08-us4-metadata-tui-polish.md  2026-07-08T19-24-48-compact-workstation-tui.md  2026-07-08T19-49-44-tui-width-adaptive.md  2026-07-08T20-05-00-all-data-e2e-audit.md  2026-07-08T20-16-52-production-docs-live-readiness.md  2026-07-08T20-30-49-ratatui-live-tui.md  2026-07-08T20-58-33-symbol-display-mapping.md  2026-07-08T21-08-54-nextgen-interactive-tui.md  2026-07-08T21-40-00-ratatui-pane-focus.md  2026-07-08T22-10-00-ratatui-contextual-pane-actions.md  2026-07-08T22-35-00-ratatui-book-tape-depth.md  2026-07-08T23-39-25-ratatui-adaptive-drilldown.md  2026-07-08T23-46-42-ratatui-pane-hotkeys.md  2026-07-08T23-58-56-ratatui-status-control-rail.md  2026-07-09T00-06-29-ratatui-market-board.md  2026-07-09T00-13-27-ratatui-adaptive-market-board.md  2026-07-09T00-22-18-ratatui-status-drilldown.md  2026-07-09T00-33-46-ratatui-color-control.md  2026-07-09T00-40-05-ratatui-market-internals-rail.md  2026-07-09T00-50-05-ratatui-book-depth-bars.md  2026-07-09T00-59-48-ratatui-tape-flow-pulse.md  2026-07-09T01-06-46-ratatui-candle-chart-axis.md  2026-07-09T01-15-58-ratatui-detail-factor-stack.md  2026-07-09T01-23-18-ratatui-public-trade-tape.md  2026-07-09T01-30-28-ratatui-market-board-score-columns.md  2026-07-09T01-38-31-ratatui-market-board-edge-bars.md  2026-07-09T01-44-36-ratatui-detail-liquidity-radar.md  2026-07-09T01-48-27-ratatui-book-flow-mode.md  2026-07-09T01-52-13-ratatui-tape-trade-flow-mode.md  2026-07-09T06-17-22Z-ratatui-color-default.md  2026-07-09T06-27-08Z-ratatui-fixture-single-frame.md  2026-07-09T07-27-28-ratatui-status-regime-board.md  2026-07-09T07-38-06-ratatui-contract-hotkeys.md  2026-07-09T07-46-17-ratatui-latency-strip.md  2026-07-09T08-18-00-ratatui-theme-rail.md  2026-07-09T08-37-00-ratatui-action-strip.md  2026-07-09T09-01-00-ratatui-medium-action-footer.md  2026-07-09T09-25-00-ratatui-persisted-preferences.md  2026-07-09T09-50-00-ratatui-canonical-naming.md  2026-07-09T10-07-20-ratatui-detail-quote-card.md  (+93 more)
scripts/: check-history-secrets.sh  check-public-readiness.sh  check-public-surface.sh  check-release-packaging.sh  check-supervisor-packaging.sh  check-third-party-licenses.sh  check-third-party-notices.py  check.sh  generate-screenshots.py  harden-generated-release-workflow.py  local-release-artifact-smoke.sh  run-supervised-soak.sh  runtime-source-sha256.py  summarize-git-history-privacy.py  summarize-git-identities.py  test-history-privacy.py  test-public-surface-gate.py  (+2 more)
(+129 files in other folders)
