[workspace]
members = [
    "crates/hls-core",
    "crates/hls-hyperliquid",
    "crates/hls-store",
    "crates/hls-features",
    "crates/hls-screen",
    "crates/hls-tui",
    "crates/hls-cli",
    "crates/hls-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
hls-core = { path = "crates/hls-core" }
hls-hyperliquid = { path = "crates/hls-hyperliquid" }
predicates = "3.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.45", features = ["fs", "macros", "rt-multi-thread"] }
toml = "0.8"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
