[workspace]
members = [
    "crates/hls-core",
    "crates/hls-hyperliquid",
    "crates/hls-store",
    "crates/hls-features",
    "crates/hls-screen",
    "crates/hls-tui",
    "crates/hls-cli",
    "crates/hls-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/s1korrrr/hlscreen"
homepage = "https://github.com/s1korrrr/hlscreen"
readme = "README.md"
description = "Read-only Hyperliquid spot market-data recorder, feature engine, and terminal screener."
keywords = ["hyperliquid", "market-data", "screener", "rust", "cli"]
categories = ["command-line-utilities", "finance"]

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
hls-core = { path = "crates/hls-core" }
hls-features = { path = "crates/hls-features" }
hls-hyperliquid = { path = "crates/hls-hyperliquid" }
hls-screen = { path = "crates/hls-screen" }
hls-server = { path = "crates/hls-server" }
hls-store = { path = "crates/hls-store" }
hls-tui = { path = "crates/hls-tui" }
predicates = "3.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.45", features = ["fs", "macros", "rt-multi-thread"] }
toml = "0.8"
zstd = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
