[workspace]
members = [
    "crates/hls-core",
    "crates/hls-hyperliquid",
    "crates/hls-store",
    "crates/hls-features",
    "crates/hls-screen",
    "crates/hls-tui",
    "crates/hls-cli",
    "crates/hls-server",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
publish = false
authors = ["RSI Tech <info@rsitech.ai>"]
license = "Apache-2.0"
repository = "https://github.com/rsitech-ai/hlscreen"
homepage = "https://rsitech.ai"
readme = "README.md"
description = "Read-only Hyperliquid spot market-data recorder, feature engine, and terminal screener."
keywords = ["hyperliquid", "market-data", "screener", "rust", "cli"]
categories = ["command-line-utilities", "finance"]

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
hls-core = { path = "crates/hls-core" }
hls-features = { path = "crates/hls-features" }
hls-hyperliquid = { path = "crates/hls-hyperliquid" }
hls-screen = { path = "crates/hls-screen" }
hls-server = { path = "crates/hls-server" }
hls-store = { path = "crates/hls-store" }
hls-tui = { path = "crates/hls-tui" }
predicates = "3.1"
portable-pty = "0.9"
parquet = { version = "59.1.0", default-features = false }
ratatui = { version = "0.30.2", default-features = false, features = [
    "std",
    "crossterm_0_29",
    "layout-cache",
    "underline-color",
] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.45", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "test-util", "time"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
toml = "0.8"
futures-util = "0.3"
wasmtime = { version = "36.0.8", default-features = false, features = ["cranelift", "runtime", "std"] }
wat = "1.240"
zstd = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
