[package]
name = "hls-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "hls"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hls-core.workspace = true
hls-hyperliquid.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
