[package]
name = "hls-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "hls"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[[test]]
name = "release_packaging"
path = "../../tests/integration/release_packaging.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
futures-util.workspace = true
hls-core.workspace = true
hls-features.workspace = true
hls-hyperliquid.workspace = true
hls-screen.workspace = true
hls-server.workspace = true
hls-store.workspace = true
hls-tui.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
portable-pty.workspace = true
predicates.workspace = true
sha2.workspace = true
tempfile.workspace = true
wat.workspace = true

[lints]
workspace = true
