[package]
name = "hls-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
