[package]
name = "hls-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
wasmtime.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
wat.workspace = true

[lints]
workspace = true
