[package]
name = "hls-features"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hls-core.workspace = true

[dev-dependencies]
hls-hyperliquid.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
