[package]
name = "hls-hyperliquid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[test]]
name = "reconnect_heartbeat"
path = "../../tests/integration/reconnect_heartbeat.rs"

[dependencies]
hls-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
