[package]
name = "hls-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hls-core.workspace = true
hls-screen.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
reqwest.workspace = true

[lints]
workspace = true
