[package]
name = "hls-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hls-core.workspace = true
hls-features.workspace = true
hls-hyperliquid.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
