[package]
name = "hls-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hls-core.workspace = true
hls-screen.workspace = true

[dev-dependencies]
hls-features.workspace = true
hls-hyperliquid.workspace = true

[lints]
workspace = true
